# OneResearchTeam

./: .gitignore  README.md  pyproject.toml
config/: research_team.yaml
docs/: project_description.md
src/oneresearchteam/agents/: __init__.py  base.py  data_analyst.py  experiment_designer.py  literature_researcher.py  nature_tools.py  pi_agent.py  writing_specialist.py
src/oneresearchteam/core/: models.py  research_state.py  task_lifecycle.py
src/oneresearchteam/research_skills/data_analysis/: SKILL.md
src/oneresearchteam/research_skills/experiment_design/: SKILL.md
src/oneresearchteam/research_skills/literature/: SKILL.md
src/oneresearchteam/research_skills/writing/: SKILL.md
