[project]
name = "oneresearchteam"
version = "0.1.0"
description = "AI-driven full-efficiency research team management system"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "loguru>=0.7",
    "langchain-core>=0.3",
    "langgraph>=0.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]